[tool.poetry]
name = "leader-bored"
version = "0.1.0"
description = "A Competitive Programming Leaderboard"
authors = ["TheJina <jainyakshittwo@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gino = {extras = ["starlette"], version = "^1.0.0"}
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
