[tool.poetry]
name = "leader-bored"
version = "0.1.0"
description = "A Competitive Programming Leaderboard"
authors = ["TheJina <jainyakshittwo@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.5"
sqlalchemy = "^1.3.17"
alembic = "^1.4.2"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
pydantic = {extras = ["email"], version = "^1.5.1"}
pyjwt = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
requests = "^2.23.0"
autopep8 = "^1.5.2"

[tool.poetry.plugins."leader_bored.modules"]
"user" = "leader_bored.api.user"
"token" = "leader_bored.api.token"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
